fix: increase z-index of modal

--- a/src/ui/sass/trumbowyg.scss
+++ b/src/ui/sass/trumbowyg.scss
@@ -293,7 +293,7 @@ $slow-transition-duration: 300ms !default;
     max-width: 520px;
     width: 100%;
     height: 350px;
-    z-index: 11;
+    z-index: 12;
     overflow: hidden;
     backface-visibility: hidden;
 }
